tests/fixtures/LatestTests/ObjectTests/errors/assign_to_const_in_function.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
type Point = {
    x: int
    y: int
}

const p: Point = {
    x: 10,
    y: 20
}

func modifyPoint() {
    p.x = 5
}

modifyPoint()
